<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainTb"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/design_default_color_on_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_vagas"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/mainTb"
            app:layout_constraintEnd_toEndOf="@id/mainTb"
            app:layout_constraintStart_toStartOf="@id/mainTb"
            app:layout_constraintTop_toTopOf="@id/mainTb" />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/nome_completo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainTb"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nomeEt"
            tools:ignore="Autofill" />

        <CheckBox
            android:id="@+id/emailCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEt" />

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/phone_template"
            android:inputType="text|phone"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailCb"
            tools:ignore="Autofill" />

        <RadioGroup
            android:id="@+id/telefoneRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telefoneEt">

            <RadioButton
                android:id="@+id/residencial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/residencial" />

            <RadioButton
                android:id="@+id/comercial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/comercial" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/adicionarCelularCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_celular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telefoneRg" />

        <LinearLayout
            android:id="@+id/celularLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adicionarCelularCb">

            <EditText
                android:id="@+id/celularEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_template"
                android:inputType="text|phone"
                android:minHeight="48dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textColorHint="#546E7A"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="Autofill" />

        </LinearLayout>

        <TextView
            android:id="@+id/sexoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/celularLl" />

        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/celularLl">

            <RadioButton
                android:id="@+id/masculinoBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/femininoBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/feminino" />
        </RadioGroup>

        <TextView
            android:id="@+id/dataNascTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sexoRg" />

        <EditText
            android:id="@+id/dataNascEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_10_10_2010"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataNascTv"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/formacaoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formacao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataNascEt" />

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/listformacao"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formacaoTv" />

        <TextView
            android:id="@+id/anoConclusaoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ano_conclusao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formacaoSp" />

        <EditText
            android:id="@+id/anoConclusaoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/_10_10_2010"
            android:inputType="date"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anoConclusaoTv"
            tools:ignore="Autofill" />

        <LinearLayout
            android:id="@+id/grad_especializacaoLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/anoConclusaoEt">
            <TextView
                android:id="@+id/instituicaoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instituicao"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/instituicaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instituicaoTv"
                tools:ignore="Autofill"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mestradoDoutoradoLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grad_especializacaoLl">
            <TextView
                android:id="@+id/monografiaTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_tulo_da_monografia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/monografiaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monografiaTv"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/orientadorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientador"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monografiaEt" />

            <EditText
                android:id="@+id/orientadorEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orientadorTv"
                tools:ignore="Autofill"/>

        </LinearLayout>

            <TextView
                android:id="@+id/vagasTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vagas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mestradoDoutoradoLl" />

        <EditText
            android:id="@+id/vagasEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/vagas_de_interesse"
            android:inputType="textMultiLine"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vagasTv"
            tools:ignore="Autofill" />

        <RadioGroup
            android:id="@+id/botaoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vagasEt">
            <Button
                android:id="@+id/salvarBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salvar"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/limparBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/limpar"
                app:layout_constraintStart_toEndOf="@id/salvarBt" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>